tests/fail/const.c
void foo()
{
    const int z = 5;
    z = 4;
}